# Python_Mini_Project

./: README.md  Task.txt
valid_date_extractor/: main.py  pyproject.toml  sample_dataset.txt
valid_date_extractor/valid_date_extractor/: cli.py  extractor.py  validator.py
valid_date_extractor/valid_date_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
