[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "valid_date_extractor"
version = "0.1.0"
description = "Extract valid dates in multiple formats from text files."
authors = [{name = "Deewang Mathur"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
extract-dates = "valid_date_extractor.cli:main"

